# blink

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark_report.md  large_results.md  medium_results.md  results_case_insensitive_large.md  results_case_insensitive_medium.md  results_case_insensitive_small.md  results_regex_large.md  results_regex_medium.md  results_regex_small.md  results_simple_large.md  results_simple_medium.md  results_simple_small.md  small_results.md  test_report.md  threading_results.md
.github/workflows/: benchmark.yml  release.yml
benches/: mod.rs
benches/data/: mod.rs
benches/scripts/: combine_results.ps1  combine_results.sh  run_benchmarks.ps1  run_benchmarks.sh
benches/suite/: mod.rs
benches/templates/: go_template.go  javascript_template.js  python_template.py  rust_template.rs  typescript_template.ts
benchmarks/: generate_test_data.rs  run_benchmarks.ps1  run_benchmarks.sh
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  search.rs
tests/: benchmark.rs  cli.rs
