[package]
name = "blink"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast command-line utility for searching text patterns in files"
default-run = "blink"

[dependencies]
# CLI parsing with derive macro support
clap = { version = "4.4.11", features = ["derive"] }
# Directory walking/traversal
walkdir = "2.4.0"
# Regex engine
regex = "1.10.2"
# Parallel iterator/threadpool
rayon = "1.8.0"
# Terminal coloring
colored = "2.0.4"
# Error handling
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2.0"    # For CLI testing
predicates = "3.0"    # For test assertions
tempfile = "3.8"      # For creating temp test files
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
flate2 = "1.0"
tar = "0.4"
encoding_rs = "0.8"
criterion = "0.5"
hyperfine = "1.18"

[[bench]]
name = "suite"
harness = false
path = "benches/suite/mod.rs"

[[bin]]
name = "generate_test_data"
path = "benches/data/mod.rs" 